src/objects/Gothamforce__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeAddress__c</fullName>
        <description>This field is used to store address of the employee</description>
        <label>EmployeeAddress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeEmailID__c</fullName>
        <description>official email id of the employee</description>
        <label>EmployeeEmailID</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <description>This field is used to track the employees</description>
        <displayFormat>G-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>EmployeeID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <description>This field is used to identify the name of the employee</description>
        <label>EmployeeName</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmployeeSalary__c</fullName>
        <description>This field is used to store the employee salary</description>
        <label>EmployeeSalary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EmployeeSkills__c</fullName>
        <description>jkl</description>
        <inlineHelpText>klj</inlineHelpText>
        <label>EmployeeSkills</label>
        <picklist>
            <picklistValues>
                <fullName>BigData</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C++</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hadoop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Gothamforce</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Gothamforce Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gothamforces</pluralLabel>
    <recordTypes>
        <fullName>Gothamforce</fullName>
        <active>true</active>
        <label>Gothamforce</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gothamforce2</fullName>
        <active>true</active>
        <label>Gothamforce2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>